# CounterLex

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY_RAILWAY.md  README.md  SLIDES.md  SPEAKER_NOTES.md  VIDEO_SCRIPT.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  e2e.yml
app/: globals.css  layout.tsx  main.py  page.tsx
app/admin/: page.tsx
app/analyze/: page.tsx
app/application/: buses.py  commands.py  queries.py
app/compare/: page.tsx
app/contact/: page.tsx
app/core/: config.py  logging.py  sanitize.py
app/dashboard/: page.tsx
app/debate/: page.tsx
app/detective/: page.tsx
app/domain/: entities.py  factors.py
app/help/: page.tsx
app/infrastructure/: factor_extractor.py  llm_client.py  mailer.py  ocr.py  ollama_client.py  outcome_model.py  pdf_extractor.py  report.py  (+3 more)
components/: ContributionBars.tsx  EvaluationPanel.tsx  FactorToggles.tsx  LanguageSwitcher.tsx  PrecedentList.tsx  ProbabilityGauge.tsx  SensitivityWaterfall.tsx  Sidebar.tsx  SiteHeader.tsx  ThemeToggle.tsx
e2e/: contact.spec.ts  dashboard.spec.ts  debate.spec.ts  home.spec.ts  i18n.spec.ts  smoke.spec.ts  theme.spec.ts
lib/: api.ts  busy.tsx  cases.ts  i18n.tsx  model.test.ts  model.ts  types.ts
sentencias-test/: README.md
tests/: conftest.py  test_api.py  test_buses.py  test_contact.py  test_counterfactual.py  test_factor_extractor.py  test_factors.py  test_outcome_model.py  test_repository.py  test_retrieval.py  test_sanitize.py  test_stats.py  test_synthetic.py  test_verdict_detection.py
(+4 files in other folders)
