[project]
name = "counterlex-backend"
version = "0.1.0"
description = "Counterfactual legal precedent explorer — CQRS backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "python-multipart>=0.0.12",
    "pypdf>=5.0",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
